--- a/week11.html
+++ b/week11.html
@@ -39,7 +39,7 @@
 <tr><td>Wentz</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
 <tr><td>MDavis</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Kirk</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Gonzalez</td>      <td></td><td align=right>0</td></tr>
@@ -51,13 +51,13 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (5)</b></font></td></tr>
 <tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Dobbins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
 <tr><td>KAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Fant</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Dobbins</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -83,8 +83,8 @@
 <tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Gibson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Chark</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
@@ -97,11 +97,11 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
 <tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>DuJohnson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Harris</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Gostkowski</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -114,9 +114,9 @@
 <tr><td>Bernard</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Tonyan</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Hurst</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Reagor</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Akers</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
